# Sherlock

./: .gitignore  README.md  pyproject.toml  release_notes.md
.github/workflows/: build-all.yml
src/: main.py
src/core/: constants.py  state.py  styles.py  theme.py  tokens.py  utils.py
src/services/: ad_service.py  sherlock_service.py  storage_service.py
src/views/: history_view.py  home_view.py  onboarding_view.py  results_view.py  settings_view.py  sites_view.py
